...

  static const _tabs = [
    (
      path: '/siswa/dashboard',
      icon: Icons.grid_view_outlined,
      activeIcon: Icons.grid_view_rounded,
      label: 'Beranda',
    ),
    (
      path: '/siswa/jadwal',
      icon: Icons.calendar_month_outlined,
      activeIcon: Icons.calendar_month_rounded,
      label: 'Jadwal',
...
